--- a/Run.html
+++ b/Run.html
@@ -73,7 +73,7 @@
 											System.out.println("hello World .. !");
 										</p>
 										<p class="code">
-											for(int i = 0 ; i <= 25 ; i++)
+											for(int i = 0 ; i <= 25 ; i++);
 										</p>
 									</div>
 									</div>
