--- a/Run.html
+++ b/Run.html
@@ -69,12 +69,9 @@
 									</div>
 									<div class="col-lg-11 col-lg-8 col-sm-6 col-sm-8">
 									<div class="code-place" style="border-style: solid; border-width:1px; height: 550px; border-top: none; border-left: none; width: 1400px; background-color: black;">
-										<p class="code">
-											System.out.println("hello World .. !");
-										</p>
-										<p class="code">
-											for(int i = 0 ; i <= 25 ; i++);
-										</p>
+										<textarea style="background-color: black; height: 550px; width: 1400px; resize: none;" class="code">
+											
+										</textarea>
 									</div>
 									</div>
 									<div>
