--- a/Run.html
+++ b/Run.html
@@ -36,7 +36,7 @@
 						<ul class="nav navbar-nav navbar-right">
 							<li><a href="Run.html">Perttify</a></li>
 							<li><a href="Run.html">Run</a></li>
-							<li><a href="">About</a></li>
+							<li><a href="About.html">About</a></li>
 						</ul>
 						
 					</div>
