--- a/Home.html
+++ b/Home.html
@@ -76,7 +76,7 @@
 				 	</div>
 				 		<div class="navbar navbar-inverse">
 				 			<div class="container-fluid">
-				 				<div class="copy-right" style="padding-left: 1590px; color: white;  padding-top:10px; font-family: 'Dekko';font-size: 20px; ">
+				 				<div class="copy-right" style="color: white;  padding-top:10px; font-family: 'Dekko';font-size: 20px; ">
 				 					<p>Copy Right C Bla bla bla</p>
 				 				</div>
 				 			</div>
